backend/TempExecution/e1dd18a24ac6495a82f38a1ec86cee04_output.txt
e1dd18a24ac6495a82f38a1ec86cee04.cpp: In function 'int main()':
e1dd18a24ac6495a82f38a1ec86cee04.cpp:11:5: error: 'vector' was not declared in this scope
   11 | 
      |     ^     
e1dd18a24ac6495a82f38a1ec86cee04.cpp:11:5: note: suggested alternatives:
In file included from C:/msys64/ucrt64/include/c++/14.1.0/vector:66,
                 from C:/msys64/ucrt64/include/c++/14.1.0/functional:64,
                 from C:/msys64/ucrt64/include/c++/14.1.0/x86_64-w64-mingw32/bits/stdc++.h:53,
                 from e1dd18a24ac6495a82f38a1ec86cee04.cpp:3:
C:/msys64/ucrt64/include/c++/14.1.0/bits/stl_vector.h:428:11: note:   'std::vector'
  428 |     class vector : protected _Vector_base<_Tp, _Alloc>
      |           ^~~~~~
C:/msys64/ucrt64/include/c++/14.1.0/vector:92:13: note:   'std::pmr::vector'
   92 |       using vector = std::vector<_Tp, polymorphic_allocator<_Tp>>;
      |             ^~~~~~
e1dd18a24ac6495a82f38a1ec86cee04.cpp:11:12: error: expected primary-expression before 'int'
   11 | 
      |            ^  
e1dd18a24ac6495a82f38a1ec86cee04.cpp:13:5: error: 'cout' was not declared in this scope; did you mean 'std::cout'?
In file included from C:/msys64/ucrt64/include/c++/14.1.0/x86_64-w64-mingw32/bits/stdc++.h:146:
C:/msys64/ucrt64/include/c++/14.1.0/iostream:63:18: note: 'std::cout' declared here
   63 |   extern ostream cout;          ///< Linked to standard output
      |                  ^~~~
e1dd18a24ac6495a82f38a1ec86cee04.cpp:13:11: error: 'v' was not declared in this scope
